deployment.yml
apiVersion: apps/v1beta1 # for versions before 1.7.0 use apps/v1beta1
kind: Deployment
metadata:
  name: pssim-api-1
  labels:
    app: pssim-api-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pssim-api-1
  template:
    metadata:
      labels:
        app: pssim-api-1
    spec:
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "foo.local"
        - "bar.local"
      - ip: "10.1.2.3"
        hostnames:
        - "foo.remote"
        - "bar.remote"
      containers:
      - name: pssim-api-1
        image: minvu.azurecr.io/pssim-api:v18
        ports:
        - containerPort: 80
      nodeSelector:
        beta.kubernetes.io/os: linux
