nginx-pod.yml
apiVersion: apps/v1
kind: Pod
metadata:
  name:nginx
spec:
  hostAliases:
  - ip: "127.0.0.1"
    hostnames:
    - "foo.local"
    - "bar.local"
  - ip: "10.1.2.3"
    hostnames:
    - "foo.remote"
    - "bar.remote"
  containers:
  - name: nginx-2
    image: nginx
