pssim-api-3-pod.yml
apiVersion: apps/v1beta1 # for versions before 1.7.0 use apps/v1beta1
kind: Deployment
metadata:
  name: pssim-api-6-pod
  labels:
    app: pssim-api-6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pssim-api-6
  template:
    metadata:
      labels:
        app: pssim-api-6
      annotations:
        external-dns.alpha.kubernetes.io: foo.example.org
    spec:
      containers:
      - name: pssim-api-6-container
        image: ivancaro/test:latest
        ports:
        - containerPort: 80
      nodeSelector:
        beta.kubernetes.io/os: linux
