ingresssvc1.yml

apiVersion: v1
kind: Service
metadata:
  name: ingress-svc
  labels:
    app: nginx-ingress
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx-ingress
  externalIPs:
  - 10.201.2.16
