pssim-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pssim-api-2
  labels:
    name: pssim-api-2
    context: pssim-api-2
spec:
  type: NodePort
  ports:
    # the port that this service should serve on
    - port: 3000
      nodePort: 30002
  # label keys and values that must match in order to receive traffic for this service
  selector:
    name: pssim-api-2
    context: pssim-api-2
