pssim-api-3-ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: pssim-api-3-ingress
spec:
  rules:
  - host: xyz.bar.com
    http:
      paths:
      - backend:
          serviceName: pssim-api-3-service
          servicePort: 80
